--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "dependencies": {
     "expo-cli": "^6.0.6",
     "expo-splash-screen": "^0.16.2",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-gesture-handler": "^2.7.0",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-screens": "^3.18.0",
+    "react-native-splash-screen": "^3.3.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   }
 }
