--- a/EnglishSpeechAccentAnalyzerApplication/package.json
+++ b/EnglishSpeechAccentAnalyzerApplication/package.json
@@ -12,10 +12,14 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
+    "axios": "^1.1.3",
     "expo": "~46.0.13",
+    "expo-av": "~12.0.4",
     "expo-status-bar": "~1.4.0",
+    "fs": "^0.0.1-security",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
@@ -23,10 +27,11 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "expo-av": "~12.0.4"
+    "rn-nodeify": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "proxy": "http://127.0.0.1:5000"
 }
